add validation and error
