# middleware/validate.js
@@ -1,0 +1,23 @@
+const validator = require('../helpers/validate');
+
+const saveUser = (req, res, next) => {
+  const validationRule = {
+    username: 'required|string',
+    password: 'required|min:6',
+    email: 'required|email',
+    phoneNumber: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+module.exports = {saveUser};
